[project]
name = "simpleagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=7.3.2",
    "gradio>=5.16.0",
    "markdownify>=0.14.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "smolagents>=1.9.2",
]
